Fri Apr 13 12:05:38 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/MEM_Stream_Test.h:
	* tests/MEM_Stream_Test.cpp: Borland C++ has problem cleaning up
	  the static Atomic_Op object in Echo_Handler in the right order.
	  Made that an ACE_Singleton and re-organized the test a big.
	  Thanks to Chris Kohlhoff <chris@kohlhoff.com> for reporting and
	  suggesting the fix.   [Bug 862]

Fri Apr 13 05:30:04 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Malloc_T.{h,i}: Added support for one of the calloc() methods
	  to ACE_Cached_Allocator.  Thanks to Rachel G Smith
 	  <Rachel_G_Smith@raytheon.com> for motivating this change.

	* ace/Malloc_Allocator.h: Updated the comments for ACE_New_Allocator
	  to indicate that the calloc() methods are also supported.
  	  Thanks to Rachel G Smith <Rachel_G_Smith@raytheon.com> for
 	  motivating this change.

	* docs/ACE-bug-process.html: Updated this document to explain how
	  bugs pertaining to OCI's TAO releases should be handled.  Thanks
 	  to Georg Lohrer <GeorgLohrer@web.de> for motivating this.

Thu Apr 12 20:36:30 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/OS.i (thr_getspecific): Reorder the way in which we check
	  the flags so that ACE_HAS_PTHREADS takes precedence over
 	  ACE_HAS_STHREADS.  Thanks to Munagala Ramanath
 	  <amberarrow@yahoo.com> for reporting this.

Thu Apr 12 21:18:44 2001  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_hpux_aCC.GNU: Added
          -D_RWSTD_MULTI_THREAD -D_REENTRANT to CCFLAGS for stdlibcpp build.
          Makes execution clean, no core dump on program init.

Thu Apr 12 17:31:36 2001  Steve Huston  <shuston@riverace.com>

        * examples/IOStream/server/iostream_server.h: Wrap the guts of this
          in #if !defined (ACE_LACKS_ACE_IOSTREAM) to build clean on platforms
          that can't handle ACE_IOStream.

Thu Apr 12 17:02:41 2001  Steve Huston  <shuston@riverace.com>
